--- a/Locales/Locales.xml
+++ b/Locales/Locales.xml
@@ -3,4 +3,5 @@
 	<Script file="Locales.lua" />
 	<!-- enUS must always be first -->
 	<Script file="enUS.lua" />
+	<Script file="zhCN.lua" />
 </Ui>
