--- a/Locales/Locales.xml
+++ b/Locales/Locales.xml
@@ -3,5 +3,6 @@
 	<Script file="Locales.lua" />
 	<!-- enUS must always be first -->
 	<Script file="enUS.lua" />
+	<Script file="ruRU.lua" />
 	<Script file="zhCN.lua" />
 </Ui>
